﻿March 6, 2014	Kendrew Peacey	Added IsConnected property to UiAssistant