@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
         xmlns:views="clr-namespace:SBXAThemeSupport.Views"
         xmlns:viewModels="clr-namespace:SBXAThemeSupport.DebugAssistant.ViewModels"
+        xmlns:sbxaThemeSupport="clr-namespace:SBXAThemeSupport"
         DataContext="{Binding Source={x:Static viewModels:DebugViewModel.Instance}}"
         Title="Application Insight" 
         Height="{Binding DebugConsoleWindowHeight}" 
@@ -25,14 +26,16 @@
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,5,0">
         <CheckBox Name="IsDebugEnabled" 
                   Content="Enable Debugging" Height="16" 
-                  HorizontalAlignment="Right" Margin="0" VerticalAlignment="Top" 
+                  HorizontalAlignment="Right" Margin="0,5,5,0" VerticalAlignment="Top" 
                   Padding="2,0,2,0"
                   IsChecked="{Binding IsDebugEnabled}"
+                  IsEnabled="{Binding Path=IsConnected, Source={x:Static viewModels:DebugViewModel.Instance}}"
                   /> 
             <CheckBox Content="Show SB/XA Debug Window"  Height="16" 
-                      HorizontalAlignment="Left" Margin="0" 
+                      HorizontalAlignment="Left" Margin="0,5,5,0" 
                       VerticalAlignment="Top" 
                       IsChecked="{Binding IsSbxaDebugWindowOpen}"
+                      IsEnabled="{Binding Path=IsConnected, Source={x:Static viewModels:DebugViewModel.Instance}}"
                       Padding="2,0,2,0"
                       />
             
