@@ -1,1 +1,3 @@
-﻿March 6, 2014	Kendrew Peacey	Added IsConnected property to UiAssistant
+﻿March 8, 2014	Kendrew	Peacey	Changed the process trace to show the process is a nested tree.
+March 8, 2014	Kendrew	Peacey	Added IsConnected property to DebugViewModel that is set on the DebugWindowManagers dispatcher thread.
+March 6, 2014	Kendrew Peacey	Added IsConnected property to UiAssistant
